--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ body {
     font-weight: bold;
 }
 
+
 h1 {
     margin-block-start: 1rem;
 }
@@ -31,19 +32,28 @@ section {
     margin-block-start: 1rem;
 }
 
+.indicators {
+    display: flex;
+    justify-content: space-between;
+    width: 750px;
+    padding-inline-end: 15px;
+    color: white;
+}
+
 .card {
     position: relative;
     transform-style: preserve-3d;
     transition: all 1s ease;
     transform: rotateY(0deg);
     box-shadow: rgba(0, 0, 0, 0.4) 0px 5px 15px;
+    border-radius: 10px;
 }
 
 .card:hover {
     cursor: pointer;
 }
 
-.face,
+.front,
 .back {
     width: 100%;
     height: 100%;
@@ -63,11 +73,10 @@ section {
 
 .hideCard {
     visibility: hidden;
-    transition: all 1.5s ease;
 }
 
-.win,
-.time {
+.win-box,
+.timeout {
     display: none;
     position: absolute;
     width: 320px;
@@ -104,8 +113,17 @@ video,
 }
 
 
-
 @media screen and (max-width:830px) {
+
+    .indicators {
+        display: flex;
+        justify-content: space-between;
+        width: 550px;
+        padding-inline-end: 25px;
+        font-size: 14px;
+    }
+
+
     section {
         grid-template-columns: repeat(7, 4rem);
         grid-template-rows: repeat(4, 6rem);
@@ -114,6 +132,14 @@ video,
 }
 
 @media screen and (max-width:600px) {
+    .indicators {
+        display: flex;
+        justify-content: space-between;
+        width: 450px;
+        padding-inline-end: 25px;
+        font-size: 12px;
+    }
+
     section {
         grid-template-columns: repeat(7, 3rem);
         grid-template-rows: repeat(4, 5rem);
